--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
     defaultConfig {
-        applicationId "example.com"
+        applicationId "com.example.android"
         minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
